--- a/src/components/footer.scss
+++ b/src/components/footer.scss
@@ -1,4 +1,23 @@
-.footer{
-	position: absolute;
-	bottom: 0;
+.footer-container {
+	display: flex;
+	padding: 2rem;
+	justify-content: center;
+
+	.footer-content {
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+
+		.brand-name {
+			text-align: center;
+			font-size: 1.5rem;
+			color: #7a120a;
+			font-weight: 500;
+		}
+
+		.copyright {
+			color: gray;
+			font-size: 0.8rem;
+		}
+	}
 }
